...
    <string name="password_requirement_needed">%s, needed</string>

    <string name="label_sign_in_to_account">Sign In to your account</string>
    <string name="label_sign_up_for_account">Sign Up for an account</string>

    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>

    <string name="content_description_show_password">Show Password</string>
    <string name="content_description_hide_password">Hide Password</string>

    <string name="content_description_email_input_leading_icon">Email Icon</string>
    <string name="content_description_password_input_leading_icon">Password input leading icon</string>
    <string name="content_description_password_input_trailing_icon_password_hidden">Password input trailing icon indicating hidden password.</string>
    <string name="content_description_password_input_trailing_icon_password_shown">Password input trailing icon indicating shown password.</string>
    <string name="content_description_icon_password_requirement_needed">Password requirement needed.</string>
    <string name="content_description_icon_password_requirement_satisfied">Password requirement satisfied.</string>

    <string name="action_sign_in">Sign In</string>
...
